<resources>
    <string name="app_name">Rattlerbees</string>

    <string name="api_key">uxUcmfEilyVJhcmLhAJEsNHfUBDi1pXB01YJRsfL</string>
    <string name="nasa_api_url">https://api.nasa.gov/planetary/apod?api_key=</string>
    <string name="bill_gates">Bill Gates</string>
    <string name="admin">ADMIN</string>
    <string name="billgates_microsoft_com">billgates@microsoft.com</string>
    <string name="logout">Logout</string>
    <string name="search">search</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="favorites">Favorites</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="users">Users</string>
    <string name="orders">Orders</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="view_orders">view orders</string>
    <string name="order_id_sample">Order: Ec7T1xhKF2aR7UK0UKjm</string>
    <string name="kevin_hart">Kevin Hart</string>
    <string name="sample_timestamp">5:30 PM - Sunday, March 21st</string>
    <string name="shoppingcart">ShoppingCart</string>
    <string name="place_order">Place Order</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="locations">Locations</string>
    <string name="order_history">Order History</string>
    <string name="admin_home_fragment">Admin Home Fragment</string>
    <string name="admin_view_orders_fragment">Admin View Orders Fragment</string>
    <string name="admin_view_users_fragment">Admin View Users Fragment</string>
    <string name="completed_orders">Completed Orders</string>
    <string name="isaiah_mcnealy">Isaiah McNealy</string>
    <string name="i_mcnealy_outlook_com">i-mcnealy@outlook.com</string>
    <string name="customer">Customer</string>
    <string name="delete_user">Delete User</string>
    <string name="cart">Cart</string>
    <string name="deactivate_user">Deactivate User</string>
    <string name="activate_user">Activate User</string>
    <string name="toggle_user_status">Toggle USer Status</string>
    <string name="menu">Menu</string>
    <string name="_123_east_tree_ln_tallahassee_fl_32304">123 East Tree Ln, Tallahassee, FL 32304</string>
    <string name="preparing_your_order">Preparing your order</string>
    <string name="ready_for_pickup_at_7_06pm">Ready for pickup at 7:06PM</string>
    <string name="order_details">Order Details</string>
    <string name="_1_item">1 Item</string>
    <string name="_1x_burrito">1x Burrito</string>
    <string name="subtotal_8_50">Subtotal: $8.50</string>
    <string name="tax_1_50">Tax: $1.50</string>
    <string name="total_10_00">Total: $10.00</string>
    <string name="in_process">In Process</string>
    <string name="complete">Complete</string>
    <string name="cancel">Cancel</string>
    <string name="welcome_back">Welcome Back</string>

</resources>