<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.admin.ViewUserDetailFragment">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/detail_user_profile_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:src="@mipmap/ic_launcher" />


    <TextView
        android:id="@+id/detail_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="#000"
        android:text="@string/isaiah_mcnealy"
        android:layout_below="@id/detail_user_profile_image"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/detail_user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:textStyle="normal"
        android:textSize="20sp"
        android:textColor="#000"
        android:text="@string/i_mcnealy_outlook_com"
        android:layout_below="@id/detail_user_name" />

    <TextView
        android:id="@+id/detail_user_account_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:textStyle="normal"
        android:textSize="15sp"
        android:textColor="#000"
        android:text="@string/customer"
        android:layout_below="@id/detail_user_email"
        />

    <Button
        android:id="@+id/button_delete_user_account"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20sp"
        android:layout_centerInParent="true"
        android:text="@string/delete_user"
        android:backgroundTint="@color/design_default_color_error"/>



</RelativeLayout>