<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/user_cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp"
    android:elevation="5dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?selectableItemBackground"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">


        <TextView
            android:id="@+id/orders_card_order_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textSize="12sp"
            android:textColor="#000"
            android:layout_marginLeft="10dp"
            android:text="@string/order_id_sample"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/orders_card_customer_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="#000"
            android:layout_below="@id/orders_card_order_id"
            android:layout_marginLeft="10dp"
            android:text="@string/kevin_hart"
            android:layout_marginStart="10dp" />

        <TextView
            android:id="@+id/orders_card_order_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="#000"
            android:layout_below="@id/orders_card_customer_name"
            android:layout_marginLeft="10dp"
            android:text="@string/sample_timestamp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/orders_card_order_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="#000"
            android:layout_below="@id/orders_card_order_time"
            android:layout_marginLeft="10dp"
            android:text="@string/in_process"
            android:layout_marginStart="10dp"/>

        <RatingBar
            android:id="@+id/rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/orders_card_order_status"
            android:numStars="5"
            android:rating="0"
            android:isIndicator="false"
            android:stepSize=".5" />


    </RelativeLayout>



</androidx.cardview.widget.CardView>

