<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/user_cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp"
    android:elevation="5dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?selectableItemBackground"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_profile_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@mipmap/ic_launcher"
            android:layout_centerVertical="true"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"/>

        <TextView
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="#000"
            android:layout_toRightOf="@+id/user_profile_image"
            android:layout_marginLeft="10dp"
            android:text="@string/bill_gates"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/user_profile_image" />

        <TextView
            android:id="@+id/user_account_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#000"
            android:layout_toRightOf="@+id/user_profile_image"
            android:layout_below="@id/user_name"
            android:layout_marginLeft="10dp"
            android:text="@string/admin"
            android:layout_toEndOf="@+id/user_profile_image"
            android:layout_marginStart="10dp" />

        <TextView
            android:id="@+id/user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="#000"
            android:layout_toRightOf="@+id/user_profile_image"
            android:layout_below="@id/user_account_type"
            android:layout_marginLeft="10dp"
            android:text="@string/billgates_microsoft_com"
            android:layout_toEndOf="@+id/user_profile_image"
            android:layout_marginStart="10dp"/>

    </RelativeLayout>



</androidx.cardview.widget.CardView>

